ajout script deploy + modif fichier readme.md

--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
-  },
+    "preview": "vite preview",
+    "deploy": "npm run build && rsync -avz dist/ mon-portfolio:/var/www/anas-sibarni.xyz"  },
   "dependencies": {
     "vue": "^3.5.22"
   },
